--- a/css/jd.css
+++ b/css/jd.css
@@ -33,6 +33,12 @@ img{
 .bgd-white{
 	background: #fff;
 }
+.active{
+	background: #E70808 !important;
+}
+.bgd-black{
+	background: rgba(0,0,0,0.30) !important;
+}
 #header{
 	width: 100%;
 	height: 30px;
@@ -533,15 +539,18 @@ img{
 }
 .shop-show{
 	position: absolute;
-	width: 930px;
+	width: 900px;
 	height: 490px;
 	top: 46px;
 	left: 210px;
+	border: 1px solid #f7f7f7;
+	background-color: #f7f7f7;
 	display: none;
+	z-index: 12;
 }
-.overview{
+.overview,.shop-dl{
 	margin-left: 20px;
-	margin-top: 5px;
+	margin-top: 10px;
 }
 .overview .overview-link{
 	margin: 0px 5px;
@@ -555,10 +564,6 @@ img{
 .overview a:hover{
 	background: #666666 !important;	
 }
-.shop-dl{
-	margin-left: 20px;
-	margin-top: 10px;	
-}
 .shop-dl dt{
 	float: left;
 }
@@ -566,4 +571,87 @@ img{
 	font-size: 14px;
 	color: black;
 	margin-right: 10px; 
+}
+#mid{
+	min-width: 1210px;
+	min-height: 490px;
+}
+#mid .bet{
+	width: 1210px;
+	height: 490px;
+	margin: 0px auto;
+	overflow: hidden;
+	border: 1px solid;
+}
+#mid .pic{
+	width: 790px;
+	height: 490px;
+	float: right;
+	margin-left: 10px;
+	background-color: #C4C1B2;
+}
+.pic-slide{
+	width: 790px;
+	height: 340px;
+	margin-bottom: 10px;
+	position: relative; 
+}
+.pic-slide .slide-item{
+	position: absolute;
+	width: 790px;
+	height: 340px;
+	display: none;
+}
+.pic-slide .carousel-index{
+	position: absolute;
+	background: rgba(255,255,255,0.20);
+	bottom: 25px;
+	left: 300px;
+	overflow: hidden;
+	border-radius: 10px;
+	text-align: center;
+}
+.carousel-index li{
+	float: left;
+	width: 20px;
+	height: 20px;
+	color: #fff;
+	background: #666666;
+	border-radius: 50%;
+	display: block;
+	margin: 0px 5px;
+	font-size: 8px;
+	text-align: center;
+	cursor: pointer;
+}
+.pic-slide .moveBtn{
+	display: block;
+	position: absolute;
+	width: 50px;
+	height: 70px;
+	background: rgba(255,255,255,0.15);
+	text-align: center;
+	cursor: pointer;
+	line-height: 70px;
+	top: 40%;
+	font-size: 26px;
+	color: #fff;
+}
+.rt{
+	right: 0px;
+}
+.lf{
+	left: 0px;
+}
+.pic-show{
+	width: 790px;
+	height: 140px;
+	background-color: #90A4F7; 
+}
+#mid .right-nav{
+	width: 190px;
+	height: 490px;
+	float: right;
+	background-color: #A7F1B6;
+	margin-left: 10px;
 }
